--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webscraper",
   "version": "1.0.0",
   "description": "",
-  "main": "webscraper.js",
+  "main": "scr/webscraper.js",
   "dependencies": {
     "axios": "^0.22.0",
     "cheerio": "^1.0.0-rc.10",
@@ -11,7 +11,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon webscraper.js"
+    "start": "nodemon scr/webscraper.js"
   },
   "author": "",
   "license": "ISC"
